--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3526,6 +3526,7 @@
     <Content Include="Views\AgroConfiguration\DealarLadger.cshtml" />
     <Content Include="Views\AgroConfiguration\_DealerGetAgroSalesProductList.cshtml" />
     <Content Include="Views\AgroConfiguration\_DealerGetAgroSalesProductDetails.cshtml" />
+    <Content Include="Views\AgroConfiguration\SalesCommissionReportList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
