--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3527,6 +3527,8 @@
     <Content Include="Views\AgroConfiguration\_DealerGetAgroSalesProductList.cshtml" />
     <Content Include="Views\AgroConfiguration\_DealerGetAgroSalesProductDetails.cshtml" />
     <Content Include="Views\AgroConfiguration\SalesCommissionReportList.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetFinishGoodStockReportList.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetSalesPaymentRegisterList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
