--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Agriculture\Interface\IMeasuremenBusiness.cs" />
     <Compile Include="Agriculture\Interface\IMRawMaterialIssueStockDetails.cs" />
     <Compile Include="Agriculture\Interface\IMRawMaterialIssueStockInfo.cs" />
+    <Compile Include="Agriculture\Interface\IPaymentMoneyRecipt.cs" />
     <Compile Include="Agriculture\Interface\IPRawMaterialStockIDetails.cs" />
     <Compile Include="Agriculture\Interface\IPRawMaterialStockInfo.cs" />
     <Compile Include="Agriculture\Interface\IProductionPerproductCost.cs" />
@@ -174,6 +175,7 @@
     <Compile Include="Agriculture\Interface\IRawMaterialSupplier.cs" />
     <Compile Include="Agriculture\MRawMaterialIssueStockDetailsBusiness.cs" />
     <Compile Include="Agriculture\MRawMaterialIssueStockInfoBusisness.cs" />
+    <Compile Include="Agriculture\PaymentMoneyReciptBusiness.cs" />
     <Compile Include="Agriculture\PRawMaterialStockIDetailsBusiness.cs" />
     <Compile Include="Agriculture\PRawMaterialStockInfoBusiness.cs" />
     <Compile Include="Agriculture\ProductionPerproductCostBusiness.cs" />
