--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -191,6 +191,10 @@
     <Compile Include="AgricultureContextMigrations\202212111129160_PAYMENTeDIT.Designer.cs">
       <DependentUpon>202212111129160_PAYMENTeDIT.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202212120729019_moneyreciptdomainaddfield.cs" />
+    <Compile Include="AgricultureContextMigrations\202212120729019_moneyreciptdomainaddfield.Designer.cs">
+      <DependentUpon>202212120729019_moneyreciptdomainaddfield.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -317,6 +321,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202212111129160_PAYMENTeDIT.resx">
       <DependentUpon>202212111129160_PAYMENTeDIT.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202212120729019_moneyreciptdomainaddfield.resx">
+      <DependentUpon>202212120729019_moneyreciptdomainaddfield.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
