--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3529,6 +3529,8 @@
     <Content Include="Views\AgroConfiguration\SalesCommissionReportList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetFinishGoodStockReportList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetSalesPaymentRegisterList.cshtml" />
+    <Content Include="Views\AgroConfiguration\SalesPaymentCreate.cshtml" />
+    <Content Include="Views\AgroConfiguration\_PaymentAgroSalesProductList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
