--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Agriculture\Interface\ISalesReturn.cs" />
     <Compile Include="Agriculture\Interface\IStockiestInfo.cs" />
     <Compile Include="Agriculture\Interface\IStockiestUserBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IStockiestWiseYearlyTarget.cs" />
     <Compile Include="Agriculture\Interface\ITerritorySetup.cs" />
     <Compile Include="Agriculture\Interface\ITerritoryUserBusiness.cs" />
     <Compile Include="Agriculture\Interface\IUserAssignBussiness.cs" />
@@ -198,6 +199,7 @@
     <Compile Include="Agriculture\SalesReturnBusiness.cs" />
     <Compile Include="Agriculture\StockiestInfoBusiness.cs" />
     <Compile Include="Agriculture\StockiestUserBusiness.cs" />
+    <Compile Include="Agriculture\StockiestWiseYearlyTargetBusiness.cs" />
     <Compile Include="Agriculture\TerritorySetupBusiness.cs" />
     <Compile Include="Agriculture\TerritoryUserBusiness.cs" />
     <Compile Include="Agriculture\UserAssignBussiness.cs" />
