--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -203,6 +203,10 @@
     <Compile Include="AgricultureContextMigrations\202212140710122_Productionprocess.Designer.cs">
       <DependentUpon>202212140710122_Productionprocess.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202212141206413_StockiestWiseYearlyTarget.cs" />
+    <Compile Include="AgricultureContextMigrations\202212141206413_StockiestWiseYearlyTarget.Designer.cs">
+      <DependentUpon>202212141206413_StockiestWiseYearlyTarget.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -338,6 +342,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202212140710122_Productionprocess.resx">
       <DependentUpon>202212140710122_Productionprocess.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202212141206413_StockiestWiseYearlyTarget.resx">
+      <DependentUpon>202212141206413_StockiestWiseYearlyTarget.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
