--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -141,6 +141,8 @@
     <Compile Include="Agriculture\Interface\IMeasuremenBusiness.cs" />
     <Compile Include="Agriculture\Interface\IMRawMaterialIssueStockDetails.cs" />
     <Compile Include="Agriculture\Interface\IMRawMaterialIssueStockInfo.cs" />
+    <Compile Include="Agriculture\Interface\IPackageDetails.cs" />
+    <Compile Include="Agriculture\Interface\IPackageInfo.cs" />
     <Compile Include="Agriculture\Interface\IPaymentMoneyRecipt.cs" />
     <Compile Include="Agriculture\Interface\IPRawMaterialStockIDetails.cs" />
     <Compile Include="Agriculture\Interface\IPRawMaterialStockInfo.cs" />
@@ -176,6 +178,8 @@
     <Compile Include="Agriculture\Interface\IRawMaterialSupplier.cs" />
     <Compile Include="Agriculture\MRawMaterialIssueStockDetailsBusiness.cs" />
     <Compile Include="Agriculture\MRawMaterialIssueStockInfoBusisness.cs" />
+    <Compile Include="Agriculture\PackageDetailsBusiness.cs" />
+    <Compile Include="Agriculture\PackageInfoBusiness.cs" />
     <Compile Include="Agriculture\PaymentMoneyReciptBusiness.cs" />
     <Compile Include="Agriculture\PRawMaterialStockIDetailsBusiness.cs" />
     <Compile Include="Agriculture\PRawMaterialStockInfoBusiness.cs" />
