--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -91,6 +91,8 @@
     <Compile Include="Agriculture\DomainModels\FinishGoodProductionInfo.cs" />
     <Compile Include="Agriculture\DomainModels\MRawMaterialIssueStockDetails.cs" />
     <Compile Include="Agriculture\DomainModels\MRawMaterialIssueStockInfo.cs" />
+    <Compile Include="Agriculture\DomainModels\PackageDetails.cs" />
+    <Compile Include="Agriculture\DomainModels\PackageInfo.cs" />
     <Compile Include="Agriculture\DomainModels\PaymentMoneyRecipt.cs" />
     <Compile Include="Agriculture\DomainModels\PRawMaterialStockIDetails.cs" />
     <Compile Include="Agriculture\DomainModels\PRawMaterialStockInfo.cs" />
@@ -137,6 +139,8 @@
     <Compile Include="Agriculture\DTOModels\FinishGoodProductionInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\MRawMaterialIssueStockDetailsDTO.cs" />
     <Compile Include="Agriculture\DTOModels\MRawMaterialIssueStockInfoDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\PackageDetailsDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\PackageInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\PaymentMoneyReciptDTO.cs" />
     <Compile Include="Agriculture\DTOModels\PRawMaterialStockIDetailsDTO.cs" />
     <Compile Include="Agriculture\DTOModels\PRawMaterialStockInfoDTO.cs" />
@@ -200,6 +204,8 @@
     <Compile Include="Agriculture\ViewModels\MonyReceptDetails.cs" />
     <Compile Include="Agriculture\ViewModels\MRawMaterialIssueStockDetailsViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\MRawMaterialIssueStockInfoViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\PackageDetailsViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\PackageInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\PaymentMoneyReciptViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\PRawMaterialStockIDetailsViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\PRawMaterialStockInfoViewModel.cs" />
