--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3555,6 +3555,7 @@
     <Content Include="Views\AgroConfiguration\GetFinishGoodProductList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetFinishGoodProductionList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetFinishGoodProductionDetails.cshtml" />
+    <Content Include="Views\AgroConfiguration\PackageCreate.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
