--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -215,6 +215,10 @@
     <Compile Include="AgricultureContextMigrations\202212171343119_Package.Designer.cs">
       <DependentUpon>202212171343119_Package.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202212201339248_Packageadd.cs" />
+    <Compile Include="AgricultureContextMigrations\202212201339248_Packageadd.Designer.cs">
+      <DependentUpon>202212201339248_Packageadd.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -359,6 +363,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202212171343119_Package.resx">
       <DependentUpon>202212171343119_Package.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202212201339248_Packageadd.resx">
+      <DependentUpon>202212201339248_Packageadd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
