--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -272,6 +272,7 @@
     <Content Include="Content\print.min.css" />
     <Content Include="Content\printJs.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\mystyles.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\LogIn\css\font-awesome.css" />
