change depot config

--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3560,6 +3560,7 @@
     <Content Include="Views\AgroConfiguration\GetPackageList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetPackageListview.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetPackageDetailsView.cshtml" />
+    <Content Include="Views\AgroConfiguration\CreateMeasurement.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
