--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -219,6 +219,10 @@
     <Compile Include="AgricultureContextMigrations\202212201339248_Packageadd.Designer.cs">
       <DependentUpon>202212201339248_Packageadd.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202212290620432_Accessoriestbl.cs" />
+    <Compile Include="AgricultureContextMigrations\202212290620432_Accessoriestbl.Designer.cs">
+      <DependentUpon>202212290620432_Accessoriestbl.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -366,6 +370,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202212201339248_Packageadd.resx">
       <DependentUpon>202212201339248_Packageadd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202212290620432_Accessoriestbl.resx">
+      <DependentUpon>202212290620432_Accessoriestbl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
