--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3561,6 +3561,7 @@
     <Content Include="Views\AgroConfiguration\_GetPackageListview.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetPackageDetailsView.cshtml" />
     <Content Include="Views\AgroConfiguration\CreateMeasurement.cshtml" />
+    <Content Include="Views\AgroConfiguration\Accessoriespurchase.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
