--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3561,7 +3561,11 @@
     <Content Include="Views\AgroConfiguration\_GetPackageListview.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetPackageDetailsView.cshtml" />
     <Content Include="Views\AgroConfiguration\CreateMeasurement.cshtml" />
+
     <Content Include="Views\AgroConfiguration\Accessoriespurchase.cshtml" />
+
+    <Content Include="Views\AgroConfiguration\_GetAccessoriesList.cshtml" />
+
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
