--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -223,6 +223,10 @@
     <Compile Include="AgricultureContextMigrations\202212290620432_Accessoriestbl.Designer.cs">
       <DependentUpon>202212290620432_Accessoriestbl.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202301020539309_RMCategories.cs" />
+    <Compile Include="AgricultureContextMigrations\202301020539309_RMCategories.Designer.cs">
+      <DependentUpon>202301020539309_RMCategories.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -373,6 +377,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202212290620432_Accessoriestbl.resx">
       <DependentUpon>202212290620432_Accessoriestbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202301020539309_RMCategories.resx">
+      <DependentUpon>202301020539309_RMCategories.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
