--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -191,6 +191,8 @@
     <Compile Include="Agriculture\ReportModels\MoneyReciptRepotData.cs" />
     <Compile Include="Agriculture\ReportModels\MRawMaterialDataReport.cs" />
     <Compile Include="Agriculture\ReportModels\ProductSalesDataChallanReport.cs" />
+    <Compile Include="Agriculture\ReportModels\ProductSalesDataChallanReport1.cs" />
+    <Compile Include="Agriculture\ReportModels\ProductSalesDataChallanReport2.cs" />
     <Compile Include="Agriculture\ReportModels\ProductSalesDataReport.cs" />
     <Compile Include="Agriculture\ReportModels\ProductSalesDataReport1.cs" />
     <Compile Include="Agriculture\ReportModels\ProductSalesDataReport2.cs" />
