--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Agriculture\DTOModels\CommisionOnProductHistoryDTO.cs" />
     <Compile Include="Agriculture\DTOModels\CommisionOnProductSalesDetailsDTO.cs" />
     <Compile Include="Agriculture\DTOModels\CommissionOnProductOnSalesDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\DashBoardAccessoriesInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\DistributionUserDTO.cs" />
     <Compile Include="Agriculture\DTOModels\DistributionUserViewModel.cs" />
     <Compile Include="Agriculture\DTOModels\DivisionInfoDTO.cs" />
